# postgres-homeworks

./: pyproject.toml
homework-1/: create_tables.sql  main.py
homework-1/src/: psql_helper.py  utils.py
homework-2/: groupby.sql  simple_queries.sql
homework-3/: queries.sql
homework-4/: alter_northwind.sql  alter_student.sql
