[tool.poetry]
name = "postgres-homeworks"
version = "0.1.0"
description = "Набор домашних заданий для изучения Postgresql"
authors = ["None"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
psycopg2 = "^2.9.9"
psycopg2-binary = "^2.9.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
